# advent_of_code

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  requirements.txt  template.cpp  template.py
src/: CMakeLists.txt  report.cpp  template.cpp
src/2023/1/: a.cpp  b.cpp
src/2023/11/: both.cpp
src/2023/13/: fa.cpp
src/2023/2/: a.cpp  b.cpp
src/2023/3/: a.cpp  b.cpp
src/2023/4/: fb.cpp
src/2023_old/: day13.2.cpp  day13.cpp  day2.cpp  day3.2.cpp  day3.cpp  day6b.py
src/2024/1/: a.cpp  b.cpp
src/2024/10/: 10a.cpp  10b.cpp  a.cpp  b.cpp
src/2024/11/: both.cpp
src/2024/12/: 12a.cpp  12b.cpp  a.cpp  b.cpp
src/2024/13/: both.cpp
src/2024/14/: 14b.cpp  a.cpp  b.cpp
src/2024/15/: 15c_interactive.cpp  a.cpp  b.cpp  b_interactive.cpp
src/2024/16/: 16a.cpp  16b.cpp  a.cpp  b.cpp  common.hpp  fb.cpp
src/2024/17/: a.cpp  b.cpp
src/2024/18/: 18a.cpp  18b.cpp  a.cpp  b.cpp
src/2024/19/: a.cpp  b.cpp
src/2024/2/: a.cpp  b.cpp  common.hpp
src/2024/20/: 20a.cpp  20b.cpp  a.cpp  b.cpp  both.cpp
src/2024/21/: both.cpp
src/2024/22/: a.cpp  b.cpp
src/2024/23/: 23b.cpp  a.cpp  b.cpp
src/2024/24/: a.cpp  b.cpp
src/2024/25/: a.cpp
src/2024/3/: a.cpp  b.cpp
src/2024/4/: a.cpp  b.cpp
src/2024/5/: a.cpp  b.cpp
src/2024/6/: a.cpp  b.cpp
src/2024/7/: a.cpp  b.cpp
src/2024/8/: 8a.cpp  8b.cpp  a.cpp  b.cpp
src/2024/9/: 9a.cpp  9b.cpp  a.cpp  b.cpp
src/2024_old/: 13a.py  14b.py  24a.py  5b.py
src/old/2023_old/: day11.cl  day11.cpp  day5.2.py  day6.py
src/old/2024_old/: 13b.py  17b.py  19a.py  3.py  (+8 more)
src/utility/: utils.cpp
(+54 files in other folders)
